err.log
In file included from ./include/msg.h:5:0,
                 from ./include/global.h:6,
                 from ./include/base.h:40,
                 from ./src/display.c:14:
./include/rbtree.h:133:0: warning: "offsetof" redefined
 #define offsetof(TYPE, MEMBER) ((size_t) &((TYPE *)0)->MEMBER)
 
In file included from c:\program files\git\mingw32\include\wctype.h:87:0,
                 from c:\program files\git\mingw32\include\ctype.h:59,
                 from ./include/base.h:8,
                 from ./src/display.c:14:
c:\program files\git\mingw32\lib\gcc\mingw32\6.3.0\include\stddef.h:417:0: note: this is the location of the previous definition
 #define offsetof(TYPE, MEMBER) __builtin_offsetof (TYPE, MEMBER)
 
In file included from ./src/display.c:14:0:
./include/base.h:56:0: warning: "ERROR" redefined
 #define ERROR  1
 
In file included from c:\program files\git\mingw32\include\windows.h:46:0,
                 from ./include/base.h:18,
                 from ./src/display.c:14:
c:\program files\git\mingw32\include\wingdi.h:348:0: note: this is the location of the previous definition
 #define ERROR       0
 
In file included from ./src/display.c:14:0:
./include/base.h:199:0: warning: "max" redefined
 #define max(a,b)    (((a) > (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:18,
                 from ./src/display.c:14:
c:\program files\git\mingw32\include\windef.h:162:0: note: this is the location of the previous definition
 #define max(a,b) ((a)>(b)?(a):(b))
 
In file included from ./src/display.c:14:0:
./include/base.h:200:0: warning: "min" redefined
 #define min(a,b)    (((a) < (b)) ? (a) : (b))
 
In file included from c:\program files\git\mingw32\include\windows.h:42:0,
                 from ./include/base.h:18,
                 from ./src/display.c:14:
c:\program files\git\mingw32\include\windef.h:165:0: note: this is the location of the previous definition
 #define min(a,b) ((a)<(b)?(a):(b))
 
./src/display.c: In function 'do_exit':
./src/display.c:73:6: warning: unused variable 'i' [-Wunused-variable]
  int i ;
      ^
./src/display.c:142:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
./src/display.c: In function 'send_control':
./src/display.c:153:2: warning: implicit declaration of function 'set_request_head' [-Wimplicit-function-declaration]
  set_request_head(buf, 0, cmd, data_len);
  ^~~~~~~~~~~~~~~~
./src/display.c: In function 'simulate_keyboard':
./src/display.c:384:5: error: expected ';' before 'break'
     break;
     ^~~~~
./src/display.c: In function 'sdl_text_show':
./src/display.c:703:36: warning: passing argument 3 of 'SDL_UpperBlit' from incompatible pointer type [-Wincompatible-pointer-types]
     SDL_BlitSurface(surface, NULL, window, &ttf_rect);
                                    ^~~~~~
In file included from ./SDL/x86/include/SDL2/SDL_video.h:34:0,
                 from ./SDL/x86/include/SDL2/SDL_events.h:33,
                 from ./SDL/x86/include/SDL2/SDL.h:41,
                 from ./src/display.c:2:
./SDL/x86/include/SDL2/SDL_surface.h:489:29: note: expected 'SDL_Surface * {aka struct SDL_Surface *}' but argument is of type 'SDL_Window * {aka struct SDL_Window *}'
 extern DECLSPEC int SDLCALL SDL_UpperBlit
                             ^~~~~~~~~~~~~
./src/display.c: In function 'switch_mode':
./src/display.c:758:9: warning: implicit declaration of function 'stop_display' [-Wimplicit-function-declaration]
         stop_display();
         ^~~~~~~~~~~~
./src/display.c:759:15: warning: implicit declaration of function 'start_control' [-Wimplicit-function-declaration]
         ret = start_control(id);
               ^~~~~~~~~~~~~
./src/display.c:767:9: warning: implicit declaration of function 'stop_control' [-Wimplicit-function-declaration]
         stop_control();
         ^~~~~~~~~~~~
./src/display.c:768:9: warning: implicit declaration of function 'start_display' [-Wimplicit-function-declaration]
         start_display();
         ^~~~~~~~~~~~~
./src/display.c: In function 'control_msg':
./src/display.c:774:12: warning: implicit declaration of function 'read_msg_order' [-Wimplicit-function-declaration]
     switch(read_msg_order(buf))
            ^~~~~~~~~~~~~~
./src/display.c: In function 'sdl_loop':
./src/display.c:896:2: warning: implicit declaration of function 'close_window' [-Wimplicit-function-declaration]
  close_window();
  ^~~~~~~~~~~~
./src/display.c: In function 'init_display':
./src/display.c:965:22: warning: passing argument 1 of 'pthread_cond_signal' from incompatible pointer type [-Wincompatible-pointer-types]
  pthread_cond_signal(&display_cond);
                      ^
In file included from ./include/base.h:10:0,
                 from ./src/display.c:14:
c:\program files\git\mingw32\include\pthread.h:1103:31: note: expected 'struct pthread_cond_t_ **' but argument is of type 'struct pthread_mutex_t_ **'
 PTW32_DLLPORT int PTW32_CDECL pthread_cond_signal (pthread_cond_t * cond);
                               ^~~~~~~~~~~~~~~~~~~
./src/display.c:975:5: warning: this 'if' clause does not guard... [-Wmisleading-indentation]
     if(vids_queue)
     ^~
./src/display.c:977:2: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
  for(i = 0; i<= display_size; i++)
  ^~~
./src/display.c:989:5: warning: this 'if' clause does not guard... [-Wmisleading-indentation]
     if(full_texture)
     ^~
./src/display.c:991:2: note: ...this statement, but the latter is misleadingly indented as if it is guarded by the 'if'
  vids_queue = NULL;
  ^~~~~~~~~~
./src/display.c:902:9: warning: unused variable 'ret' [-Wunused-variable]
  int i, ret, x = 0, y = 0;
         ^~~
./src/display.c: At top level:
./src/display.c:1017:6: warning: conflicting types for 'close_window'
 void close_window()
      ^~~~~~~~~~~~
./src/display.c:896:2: note: previous implicit declaration of 'close_window' was here
  close_window();
  ^~~~~~~~~~~~
./src/display.c: In function 'close_window':
./src/display.c:1020:2: warning: implicit declaration of function 'send_msg' [-Wimplicit-function-declaration]
  send_msg(pipe_event[1], &stop, 1);
  ^~~~~~~~
At top level:
./src/display.c:25:12: warning: 'video_disable' defined but not used [-Wunused-variable]
 static int video_disable = 0;
            ^~~~~~~~~~~~~
make: *** [display.o] Error 1
